--- a/vignettes/RIdeogram.Rmd
+++ b/vignettes/RIdeogram.Rmd
@@ -199,6 +199,7 @@ For one-line label,
 data(liriodendron_karyotype, package="RIdeogram") #load the karyotype data
 data(Fst_between_CE_and_CW, package="RIdeogram") #load the Fst data for overlaid heatmap
 data(Pi_for_CE, package="RIdeogram") #load the Pi data for one-line label
+head(Pi_for_CE) #this data has a similar format with the heatmap data with additional column of "Color" which indicate the color for the line.
 ideogram(karyotype = liriodendron_karyotype, overlaid = Fst_between_CE_and_CW, label = Pi_for_CE, label_type = "line", colorset1 = c("#e5f5f9", "#99d8c9", "#2ca25f"))
 convertSVG("chromosome.svg", device = "png")
 ```
@@ -210,6 +211,7 @@ For two-line label,
 data(liriodendron_karyotype, package="RIdeogram") #load the karyotype data
 data(Fst_between_CE_and_CW, package="RIdeogram") #load the Fst data for overlaid heatmap
 data(Pi_for_CE_and_CW, package="RIdeogram") #load the Pi data for two-line label
+head(Pi_for_CE_and_CW) #this data has a similar format with the one for one-line label with additional two columns indicating the second feature you want to show.
 ideogram(karyotype = liriodendron_karyotype, overlaid = Fst_between_CE_and_CW, label = Pi_for_CE_and_CW, label_type = "line", colorset1 = c("#e5f5f9", "#99d8c9", "#2ca25f"))
 convertSVG("chromosome.svg", device = "png")
 ```
@@ -237,6 +239,8 @@ convertSVG("chromosome.svg", device = "png")
 ```
 
 <img src="figures/example14.png" width="100%" />
+
+Comparing with the two-line label plot, we shift all x coordinates of the second polygon labels to right with a 0.2X chromosome width for better visualization.
 
 In addition, you can use the argument "device" (default value is "png")to set the format of output file, such as, "tiff", "pdf", "jpg", etc. And, you can use the argument "dpi" (default value is "300") to set the resolution of the output image file.
 
